tests/neg/i1424.scala
class Test {
  (x: Int) => x // error: not a legal self type clause
}
